# ComfyUI-OmniX

./: .gitignore  CONTRIBUTING.md  CRITICAL_ADAPTER_FAILURE_ANALYSIS.md  DESIGN_DOC.md  DIFFUSERS_IMPLEMENTATION.md  FIXES_APPLIED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  KEY_REMAPPING_FIX_SUMMARY.md  KEY_REMAPPING_REVERSION.md  LICENSE  MODEL_DOWNLOAD_GUIDE.md  OUTPUT_QUALITY_INVESTIGATION.md  PHASE1_COMPLETE.md  QUALITY_REVIEW_FINDINGS.md  QUICK_START.md  README.md  ROUND3_FIXES.md  __init__.py  agents.md  agents_omnix_comfyui.md  debug_adapter_weights.py  design_doc.md  download_models.py  nodes.py  nodes_diffusers.py  nodes_perception_only.py  nodes_visualization.py  omni_x_nodes.py  omni_x_utils.py  pyproject.toml  reproduce_issue.py  requirements.txt  tmp_before.txt
.archive/: FINAL_LORA_FIX.md  PHASE1_PROGRESS_REPORT.md  README.md  REMAINING_IMPLEMENTATION.md  ROUND4_FIXES.md  WEIGHT_CONVERSION_FIX.md
.claude/: settings.local.json
DOCS/: CHANGELOG.md  DIFFUSERS_IMPLEMENTATION.md  MODEL_DOWNLOAD_GUIDE.md  PYTORCH_LOADING_FIX.md  QUICK_START_DIFFUSERS.md  SESSION_SUMMARY.md  TESTING_GUIDE.md
TestImages/: test_perception_simple.json
examples/: README.md  WORKFLOWS.md  omnix_all_perceptions.json  omnix_depth_from_image.json  omnix_full_pipeline.json
omnix/: ADAPTER_IMPLEMENTATIONS.md  __init__.py  adapters.py  adapters_new.py  adapters_old.py  cross_lora.py  diffusers_key_remap.py  error_handling.py  generator.py  model_loader.py  perceiver.py  utils.py  weight_converter.py
scripts/: README.md  convert_loras.py  verify_loras.py
tests/: __init__.py  run_tests.py  test_adapters.py  test_e2e_workflow.py  test_model_loader.py  test_perceiver.py  test_utils.py
workflows/: example_perception.json  example_text_to_panorama.json  test_perception_simple.json
