[project]
name = "omnix"
description = "Extract comprehensive scene properties from 360-degree equirectangular panoramas, including depth, normals, and PBR materials, using OmniX adapters with Flux."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-OmniX Requirements", "# Core dependencies for OmniX panorama generation and perception", "# PyTorch and related (usually installed with ComfyUI)", "torch>=2.0.0", "torchvision>=0.15.0", "# Model loading and inference", "safetensors>=0.4.0", "accelerate>=0.24.0", "huggingface_hub>=0.20.0", "diffusers>=0.34.0", "transformers>=4.37.0", "peft>=0.10.0", "# Utilities", "numpy>=1.24.0", "pillow>=10.0.0", "scipy>=1.11.0", "# Optional: for depth map visualization", "matplotlib>=3.7.0", "# Optional: for advanced features", "einops>=0.7.0", "omegaconf>=2.3.0"]

[project.urls]
Repository = "https://github.com/cedarconnor/ComfyUI-OmniX"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/cedarconnor/ComfyUI-OmniX/wiki"
"Bug Tracker" = "https://github.com/cedarconnor/ComfyUI-OmniX/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-OmniX"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

